[tool.poetry]
name = "controlnet_package"
version = "0.1.0"
description = "A professional Python package for ControlNet implementation and fine-tuning"
authors = ["Sanjay Jonckheere <sjonckheere@protonmail.com>"]
readme = "README.md"
packages = [{include = "controlnet_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
diffusers = "^0.29.2"
transformers = "^4.38.2"
# PyTorch dependencies will be installed separately
accelerate = "^0.28.0"
timm = "^0.9.16"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
controlnet = "controlnet_package.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
